force-app/main/default/objects/Integration_Endpoint__c/Integration_Endpoint__c.object-meta.xml
<CustomObject>
    <label>Integration Endpoint</label>
    <nameField>
        <displayFormat>INT-EP-{0000}</displayFormat>
        <label>Integration Endpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>