force-app/main/default/objects/Integration_Endpoint__c/fields/Auth_Profile__c.field-meta.xml
<CustomField>
    <fullName>Auth_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auth Profile</label>
    <referenceTo>Integration_Auth_Profile__c</referenceTo>
    <relationshipLabel>Integration Endpoints</relationshipLabel>
    <relationshipName>Integration_Endpoints</relationshipName>
    <type>Lookup</type>
</CustomField>