force-app/main/default/objects/Integration_Endpoint__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <description>URL to send callback notifications to after async integration processing completes.</description>
    <inlineHelpText>For async or batch integrations, this URL receives a POST callback with the processing result.</inlineHelpText>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>