force-app/main/default/objects/Integration_Endpoint__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>application/json</label>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
            <value>
                <fullName>multipart/form-data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>