force-app/main/default/objects/Integration_Endpoint__c/fields/Custom_Headers__c.field-meta.xml
<CustomField>
    <fullName>Custom_Headers__c</fullName>
    <description>JSON format for custom HTTP headers</description>
    <label>Custom Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>