force-app/main/default/objects/Integration_Endpoint__c/fields/Integration_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Integration_Scenario__c</fullName>
    <label>Integration Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound_API_Call</fullName>
                <label>Outbound API Call</label>
            </value>
            <value>
                <fullName>Inbound_API_Receive</fullName>
                <label>Inbound API (Receive Data)</label>
            </value>
            <value>
                <fullName>Bidirectional_Sync</fullName>
                <label>Bidirectional Sync</label>
            </value>
            <value>
                <fullName>Webhook_Listener</fullName>
                <label>Webhook Listener</label>
            </value>
            <value>
                <fullName>Scheduled_Sync</fullName>
                <label>Scheduled Sync</label>
            </value>
            <value>
                <fullName>Event_Driven</fullName>
                <label>Event-Driven</label>
            </value>
            <value>
                <fullName>Batch_Processing</fullName>
                <label>Batch Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>