force-app/main/default/objects/Integration_Endpoint__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <label>Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>