force-app/main/default/objects/Integration_Endpoint__c/fields/Post_Process_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Post_Process_Apex_Class__c</fullName>
    <description>Apex class implementing IIntegrationHook to execute after the integration callout completes or after inbound data is processed.</description>
    <inlineHelpText>Enter the API name of an Apex class that implements IIntegrationHook. This runs after the callout response (outbound) or after DML (inbound).</inlineHelpText>
    <label>Post-Process Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>