force-app/main/default/objects/Integration_Endpoint__c/fields/Pre_Process_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Pre_Process_Apex_Class__c</fullName>
    <description>Apex class implementing IIntegrationHook to execute before the integration callout or before processing inbound data.</description>
    <inlineHelpText>Enter the API name of an Apex class that implements IIntegrationHook. This runs before the callout (outbound) or before data mapping (inbound).</inlineHelpText>
    <label>Pre-Process Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>