force-app/main/default/objects/Integration_Endpoint__c/fields/Query_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Query_Parameters__c</fullName>
    <description>JSON format for query parameters</description>
    <label>Query Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>