force-app/main/default/objects/Integration_Endpoint__c/fields/Retry_Config__c.field-meta.xml
<CustomField>
    <fullName>Retry_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retry Config</label>
    <referenceTo>Integration_Retry_Config__c</referenceTo>
    <relationshipLabel>Integration Endpoints</relationshipLabel>
    <relationshipName>Integration_Endpoints</relationshipName>
    <type>Lookup</type>
</CustomField>