force-app/main/default/objects/Integration_Endpoint__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The Salesforce object that provides data for outbound integrations or receives data for inbound integrations.</description>
    <inlineHelpText>API name of the Salesforce object (e.g., Account, Contact, Opportunity__c).</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>