force-app/main/default/objects/Integration_Endpoint__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <label>Timeout</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>